fixed spacing between columns for better appearance

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -64,6 +64,10 @@ input.value-display {
 	font-size: 1.24rem;
 }
 
+.col-centered {
+	margin: 0 auto;
+}
+
 // didn't look good on mobile device
 // @media only screen and (max-width: 768px) {
 // 	.item-name { padding-left: 2rem; }
